--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
       href="https://res.cloudinary.com/df4ghpsiz/image/upload/v1742661142/Group_2_ixliul.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>NEXTSTEP</title>
   </head>
   <body>
     <div id="root"></div>
